--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -23,7 +23,7 @@ https://api.meiyan.com/iap/verify.json url script-response-body https://raw.gith
 # > 052 每日艺术 解锁vip权限（20201123）
 https://panel.getdailyart.com/APIMobile/users/single url response-body account_type":"0 response-body account_type":"2
 
-# > 051 彩云天气 解锁会员权限（20201121）Author: blackmatrix7 
+# > 051 彩云天气 解锁会员权限（20201121）
 https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caiyun.js
 
 # > 050 豌豆清单 为你的日程好好规划一下(20201112)
