--- a/Rewrite/Ua.conf
+++ b/Rewrite/Ua.conf
@@ -8,7 +8,10 @@
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Ua.conf
 // ==/UserScript==
 
-hostname = blog.csdn.net, 
+hostname = blog.csdn.net, m.baidu.com, 
 
+# > 百度
+^https?:\/\/m\.baidu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
 
+# > CSDN
 ^https:\/\/blog\.csdn\.net url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36$2
