--- a/Rewrite/Ua.conf
+++ b/Rewrite/Ua.conf
@@ -1,7 +1,8 @@
 // ==UserScript==
 // @Name              UA设置
 // @Website           百度，CSDN          
-// @Author            @GB-png, Modified by Cuttlefish
+// @Author            Cuttlefish
+// @Share             若有需要的网站UA设置，可TG私信
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201207      
