--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -12,8 +12,12 @@
 // ==/UserScript==
 
 
-hostname = d.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+hostname = d.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, 
 
+# > 007 AppleAndroid 微信小程序破解 弹框显示内容（20201214）
+https://iosoi.cn/wp-json/wp/v2/posts/\d+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js
+# > 辅助去除页面小卡片式广告
+https://iosoi.cn/wp-content/plugins/xingshu.php url response-body adid":"[^"]*" response-body adid":""
 
 # > 006 森茂雅苑 微信小程序解锁隐藏内容 去除广告直接查看内容（20201027）
 https://d.smkj33.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
