--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -5,10 +5,10 @@
 // @Author            Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20201116
+// @UpdateTime        20201216
 // @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Applet.conf
-// @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑、御花园、搜罗好货
+// @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑、御花园、搜罗好货、AA、扎比科技
 // ==/UserScript==
 
 
