--- a/Profile/QuantumultX.conf
+++ b/Profile/QuantumultX.conf
@@ -66,10 +66,10 @@ server=/*testflight.apple.com/8.8.4.4
 
 [policy]
 static=网易云音乐, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
-static=全球加速, 节点选择, 手动选择, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Global.png
-static=苹果服务, direct, 节点选择, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Apple.png
-static=港台番剧, direct, 节点选择, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/StreamingSE.png
-static=国际媒体, 节点选择, 手动选择, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Streaming.png
+static=全球加速, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Global.png
+static=苹果服务, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Apple.png
+static=港台番剧, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/StreamingSE.png
+static=国际媒体, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Streaming.png
 static=黑白名单, proxy, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Final.png
 
 [filter_remote]
