--- a/Profile/Rules.conf
+++ b/Profile/Rules.conf
@@ -2,7 +2,7 @@
 ## 工具：Shadowrocket解锁网易云音乐配置
 ## 作者：墨鱼手记
 ## 更新：2021-03-04
-## 链接：https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Profile/Rules.conf
+## 链接：https://github.com/ddgksf2013/Cuttlefish/raw/master/Profile/Rules.conf
 #---------------------------------------------------#
 [General]
 ipv6 = false
@@ -10,7 +10,7 @@ bypass-system = true
 dns-server = 1.2.4.8, 114.114.114.114, 223.5.5.5, 8.8.8.8, system
 skip-proxy = 192.168.0.0/16, 193.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 127.0.0.1, 17.0.0.0/8, localhost, *.local
 bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
-update-url = https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Profile/Rules.conf
+update-url = https://github.com/ddgksf2013/Cuttlefish/raw/master/Profile/Rules.conf
 
 [Rule]
 # > 网易云解锁分流
